--- a/about.html
+++ b/about.html
@@ -46,9 +46,12 @@
       href="/resources/Icons/favicon-16x16.png"
     />
     <link rel="manifest" href="/resources/Icons/site.webmanifest" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -109,12 +112,13 @@
           <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
           ><i class="fa-solid fa-star"></i>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-            facere impedit itaque officiis sequi suscipit nulla delectus dolor
-            laudantium velit dolorem ex modi quis eveniet non rerum explicabo
-            esse, tempore necessitatibus repellat. Libero beatae rem ipsam
-            necessitatibus in, exercitationem id corrupti aut quam eum
-            distinctio aliquid voluptates temporibus! Provident, ullam!
+            Tworzymy spersonalizowane rozwiązania ubezpieczeniowe, dostosowane
+            do Twoich indywidualnych potrzeb. Nasza misja to nie tylko zapewnić
+            ochronę finansową, ale także budować trwałe relacje oparte na
+            zaufaniu. Dzięki innowacyjnemu podejściu i doświadczeniu w branży
+            ubezpieczeniowej, stawiamy na kompleksową opiekę, gwarantując Ci
+            spokój ducha. Poznaj nas bliżej i przekonaj się, dlaczego warto nam
+            zaufać!"
           </p>
         </div>
         <div class="right-site right-img">
@@ -130,12 +134,12 @@
           <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
           ><i class="fa-solid fa-star"></i>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-            facere impedit itaque officiis sequi suscipit nulla delectus dolor
-            laudantium velit dolorem ex modi quis eveniet non rerum explicabo
-            esse, tempore necessitatibus repellat. Libero beatae rem ipsam
-            necessitatibus in, exercitationem id corrupti aut quam eum
-            distinctio aliquid voluptates temporibus! Provident, ullam!
+            Jesteśmy zespołem pasjonatów, gotowych dostosować się do Twoich
+            unikalnych potrzeb. Nasza wizja to nie tylko ochrona finansowa, ale
+            także partnerskie podejście, które przekracza granice standardowych
+            ubezpieczeń. Poznaj nasze wartości, doświadczenie i zaangażowanie –
+            razem z nami zbuduj bezpieczną przyszłość, która odzwierciedla Twoje
+            marzenia i cele życiowe.
           </p>
         </div>
       </div>
