--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia."
     />
     <title>ZZ-Consulting Strona Główna</title>
-    <link rel="preload" as="image" imagesrcset="/resources/header.webp" />
+    <link rel="preload" as="image" href="/resources/header.webp" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -112,22 +112,27 @@
 
       <div class="choose-description container">
         <div class="left-site">
-          <img src="/resources/choose-us.jpg" alt="Choose-us" width="400px">
+          <img src="/resources/choose-us.jpg" alt="Choose-us" width="400px" />
         </div>
         <div class="right-site">
-          <h2>Najlepsze ubezpieczenia w Chorzowie</h3>
-          <p>Wybrani jako Orły ubezpieczeń w plebiscycie branżowym 2022. </p>
-          <h2>U nas zapłacisz gotówką, kartą, BLIK i przelewem!</h3>
-            <p>Przyjmujemy płatność gotówką, kartą, przelewem oraz BLIKiem. Dodatkowo za ubezpieczenie możesz zapłacić przelewem.
-            </p>
-            <h2>Przypomnimy o Twoim ubezpieczeniu!</h3>
-              <p>Zadzwonimy do Ciebie przed końcem trwania umowy i przypomnimy o Twoim ubezpieczeniu oraz zaprezentujemy nową ofertę.</p>
+          <h2>Najlepsze ubezpieczenia w Chorzowie</h2>
+          <p>Wybrani jako Orły ubezpieczeń w plebiscycie branżowym 2022.</p>
+          <h2>U nas zapłacisz gotówką, kartą, BLIK i przelewem!</h2>
+          <p>
+            Przyjmujemy płatność gotówką, kartą oraz BLIKiem. Dodatkowo za
+            ubezpieczenie możesz zapłacić przelewem.
+          </p>
+          <h2>Przypomnimy o Twoim ubezpieczeniu!</h2>
+          <p>
+            Zadzwonimy do Ciebie przed końcem trwania umowy, przypomnimy o Twoim
+            ubezpieczeniu oraz zaprezentujemy nową ofertę.
+          </p>
         </div>
       </div>
-   </section>
+    </section>
     <section id="offer">
       <h3 class="offer-header">Oferta</h3>
-      <div class="offer-container reveal fade-bottom">
+      <div class="offer-container">
         <div class="splide">
           <div class="splide__track">
             <ul class="splide__list">
@@ -139,10 +144,10 @@
                       <div><h4>Ubezpieczenie OC/AC</h4></div>
                       <div>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Exercitationem, iusto quod est repellat
-                          recusandae magni debitis. Consectetur pariatur quam
-                          iusto!
+                          Zabezpiecz swoją podróż drogową z naszym kompleksowym
+                          ubezpieczeniem OC/AC. Oferujemy spersonalizowane
+                          rozwiązania, dostosowane do Twoich potrzeb,
+                          zapewniając pełną ochronę na każdym etapie podróży.
                         </p>
                       </div>
                       <div>
@@ -167,10 +172,11 @@
                       <div><h4>Ubezpieczenie na życie</h4></div>
                       <div>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Exercitationem, iusto quod est repellat
-                          recusandae magni debitis. Consectetur pariatur quam
-                          iusto!
+                          Zabezpiecz swoją przyszłość i troszcz się o bliskich
+                          dzięki naszemu wszechstronnemu ubezpieczeniu na życie.
+                          Oferujemy plany dostosowane do Twoich celów i potrzeb,
+                          gwarantując pełną ochronę finansową dla Ciebie i
+                          Twojej rodziny.
                         </p>
                       </div>
                       <div><button class="button">Sprawdź więcej</button></div>
@@ -193,10 +199,12 @@
                       <div><h4>Ubezpieczenie szkolne</h4></div>
                       <div>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Exercitationem, iusto quod est repellat
-                          recusandae magni debitis. Consectetur pariatur quam
-                          iusto!
+                          Zapewniaj swojemu dziecku bezpieczeństwo w szkole
+                          dzięki naszemu kompleksowemu ubezpieczeniu szkolnemu.
+                          Oferujemy spersonalizowane plany, dostosowane do
+                          specyficznych potrzeb uczniów, zapewniając pełną
+                          ochronę w trakcie zajęć, wycieczek i innych aktywności
+                          edukacyjnych.
                         </p>
                       </div>
                       <div><button class="button">Sprawdź więcej</button></div>
@@ -220,10 +228,11 @@
                       <div><h4>Ubezpieczenie podróżne</h4></div>
                       <div>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Exercitationem, iusto quod est repellat
-                          recusandae magni debitis. Consectetur pariatur quam
-                          iusto!
+                          Podróżuj bezpiecznie i z pełnym spokojem dzięki
+                          naszemu wszechstronnemu ubezpieczeniu podróżnemu.
+                          Oferujemy spersonalizowane plany, dostosowane do
+                          Twoich indywidualnych potrzeb, zapewniając kompleksową
+                          ochronę na każdym etapie podróży.
                         </p>
                       </div>
                       <div><button class="button">Sprawdź więcej</button></div>
@@ -239,6 +248,69 @@
                   </div>
                 </div>
               </li>
+              <li class="splide__slide">
+                <div class="offer-box">
+                  <div class="row">
+                    <div class="left-row">
+                      <div>
+                        <i class="fa-solid fa-graduation-cap fa-2xl"></i>
+                      </div>
+                      <div><h4>Ubezpieczenie mieszkań/domów</h4></div>
+                      <div>
+                        <p>
+                          Ubezpieczenia mieszkań/domów to nie tylko ochrona
+                          przed nieprzewidzianymi zdarzeniami, ale także
+                          gwarancja spokoju ducha. Bezpieczeństwo Twojego
+                          miejsca mieszkania to dla nas priorytet, dlatego
+                          oferujemy rozwiązania, które dają Ci
+                          pewność, że jesteś
+                          odpowiednio zabezpieczony.
+                        </p>
+                      </div>
+                      <div><button class="button">Sprawdź więcej</button></div>
+                    </div>
+                    <div class="right-row">
+                      <div>
+                        <img
+                          src="/resources/homeInsurance.webp"
+                          alt="Szkolne"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="offer-box">
+                  <div class="row">
+                    <div class="left-row">
+                      <div>
+                        <i class="fa-solid fa-graduation-cap fa-2xl"></i>
+                      </div>
+                      <div><h4>Ubezpieczenie firmowe</h4></div>
+                      <div>
+                        <p>
+                          Nasze ubezpieczenia firmowe są dostosowane do
+                          różnorodnych potrzeb przedsiębiorstw, oferując nie
+                          tylko zabezpieczenie przed ryzykami, ale także
+                          wsparcie w trudnych sytuacjach. Z
+                          nami Twój biznes ma solidne oparcie, a Ty masz
+                          partnera gotowego chronić Twoje interesy.
+                        </p>
+                      </div>
+                      <div><button class="button">Sprawdź więcej</button></div>
+                    </div>
+                    <div class="right-row">
+                      <div>
+                        <img
+                          src="/resources/company-insurance.webp"
+                          alt="Szkolne"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
@@ -247,18 +319,29 @@
     <section id="calculator-online">
       <div class="container center">
         <div class="car-insurance">
-            <div class="car-left-site">
-                <h1>Kalkulator On-line</h1>
-                <p>Nie wiesz, jaką wybrać polisę? 🤔 Sprawdź za darmo oferty ubezpieczeń 🚗 i wybierz najkorzystniejszą propozycję dla Ciebie i Twojego auta 👉
-                    Zawierając polisę ubezpieczeniową w sposób zdalny zapewniamy pomoc w przypadku zmiany danych lub też potrzeby zgłoszenia szkody.</p>
-                    <a href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE=">
-                    <button class="button">Przejdź do kalkulatora!</button>
-                    </a>
-            </div>
-            <div class="car-right-site">
-                <img src="https://scontent.fktw4-1.fna.fbcdn.net/v/t39.30808-6/380593665_805521414913511_7053597363580076665_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YFXd5Px8JZIAX8A2c4a&_nc_ht=scontent.fktw4-1.fna&oh=00_AfBBo18ONvSAy-W0zLbzmJvYwnv8urX4iHniRQCISvhADg&oe=65571B70" alt="calcualtor-photo">
-            </div>
+          <div class="car-left-site">
+            <h1>Kalkulator On-line</h1>
+            <p>
+              Nie wiesz, jaką wybrać polisę? 🤔 Sprawdź za darmo oferty
+              ubezpieczeń 🚗 i wybierz najkorzystniejszą propozycję dla Ciebie i
+              Twojego auta 👉 Zawierając polisę ubezpieczeniową w sposób zdalny
+              zapewniamy pomoc w przypadku zmiany danych lub też potrzeby
+              zgłoszenia szkody.
+            </p>
+            <a
+              href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE="
+            >
+              <button class="button">Przejdź do kalkulatora!</button>
+            </a>
+          </div>
+          <div class="car-right-site">
+            <img
+              src="https://scontent.fktw4-1.fna.fbcdn.net/v/t39.30808-6/380593665_805521414913511_7053597363580076665_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YFXd5Px8JZIAX8A2c4a&_nc_ht=scontent.fktw4-1.fna&oh=00_AfBBo18ONvSAy-W0zLbzmJvYwnv8urX4iHniRQCISvhADg&oe=65571B70"
+              alt="calcualtor-photo"
+            />
+          </div>
         </div>
+      </div>
     </section>
 
     <section id="partners">
