--- a/partners/ergo-hestia.html
+++ b/partners/ergo-hestia.html
@@ -114,25 +114,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>ERGO-Hestia</b> to dynamiczna firma ubezpieczeniowa, łącząca potężne doświadczenie z innowacyjnością. Jesteśmy liderem na rynku, oferując kompleksowe i elastyczne rozwiązania ubezpieczeniowe dla klientów indywidualnych i biznesowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Mienia:</b> Ochrona domu, mieszkania i majątku, dostosowana do indywidualnych potrzeb.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Spersonalizowane polisy, obejmujące szeroki zakres ochrony dla Ciebie i Twoich bliskich.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowa opieka medyczna, dostosowana do zmieniających się potrzeb zdrowotnych.</li>
+                    <li><b>Ubezpieczenia dla Firm:</b> Dostosowane rozwiązania ubezpieczeniowe dla przedsiębiorstw, z myślą o stabilności finansowej.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Ergo-Hestia:
+                  <ul>
+                    <li><b>Doświadczenie i Innowacje:</b> Kombinujemy długoletnie doświadczenie z nowoczesnym podejściem, aby dostarczać optymalne rozwiązania.</li>
+                    <li><b>Wszechstronność i Elastyczność:</b> Nasze ubezpieczenia są dopasowane do różnorodnych potrzeb klientów, zapewniając pełną ochronę.</li>
+                    <li><b>Lider na Rynku:</b> Jesteśmy uznawanym liderem, oferującym zaawansowane i konkurencyjne produkty.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 801 107 107</p>
+                <p class="contact-description">E-mail: bok@ergohestia.pl</p>
               </div>
             </div>
           </div>
