--- a/partners/generali.html
+++ b/partners/generali.html
@@ -114,25 +114,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>Generali</b> to światowy lider w dziedzinie ubezpieczeń, angażujący się w dostarczanie kompleksowych rozwiązań ochronnych dla klientów na całym globie. Nasza firma jest znana ze stabilności finansowej, profesjonalizmu i innowacyjnych produktów ubezpieczeniowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Majątkowe:</b> Chronimy Twój majątek, zapewniając spokój ducha i bezpieczeństwo finansowe.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Planuj przyszłość z naszymi elastycznymi polisami, dostosowanymi do Twoich celów życiowych.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Zdrowie jest najważniejsze - oferujemy kompleksową ochronę medyczną.</li>
+                    <li><b>Ubezpieczenia Podróży:</b> Bezpiecznie podróżuj z naszymi polisami ubezpieczeniowymi.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Generali:
+                  <ul>
+                    <li><b>Międzynarodowa Obecność:</b> Jesteśmy obecni na rynkach światowych, dostarczając rozwiązania dopasowane do lokalnych potrzeb.</li>
+                    <li><b>Innowacyjne Produkty:</b> Nasze nowoczesne podejście do ubezpieczeń to gwarancja kompleksowej ochrony.</li>
+                    <li><b>Zaufanie i Dostępność:</b> Dbamy o naszych klientów, zapewniając wsparcie i dostęp do usług na każdym etapie.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 913 913 913</p>
+                <p class="contact-description">E-mail: centrumklienta@generali.pl</p>
               </div>
             </div>
           </div>
