--- a/partners/interrisk.html
+++ b/partners/interrisk.html
@@ -114,25 +114,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>InterRisk</b> to firma ubezpieczeniowa, której celem jest dostarczanie innowacyjnych i kompleksowych rozwiązań ochronnych dla klientów na rynku ubezpieczeniowym. Jesteśmy dedykowani bezpieczeństwu i zadowoleniu naszych klientów.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Majątkowe:</b> Ochrona Twojego majątku, mieszkania i mienia przed nieprzewidzianymi zdarzeniami.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne polisy na życie, dostosowane do Twoich indywidualnych potrzeb i planów życiowych.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowe rozwiązania medyczne, które zapewniają spokój ducha w razie potrzeby opieki zdrowotnej.</li>
+                    <li><b>Ubezpieczenia Podróży:</b> Obejmujemy Cię ochroną na każdym etapie podróży, zapewniając spokój i bezpieczeństwo.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego InterRisk:
+                  <ul>
+                    <li><b>Długoletnie Doświadczenie:</b> Jesteśmy obecni na rynku od wielu lat, zdobywając zaufanie klientów.</li>
+                    <li><b>Wszechstronne Produkty:</b> Nasze ubezpieczenia są dopasowane do różnych potrzeb, zapewniając kompleksową ochronę.</li>
+                    <li><b>Indywidualne Podejście:</b> Zawsze stawiamy na indywidualne podejście do klienta, rozumiejąc jego unikalne potrzeby.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 22 575 25 25</p>
+                <p class="contact-description">E-mail: korespondencja@InterRisk.pl</p>
               </div>
             </div>
           </div>
