--- a/partners/link4.html
+++ b/partners/link4.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>Link4</b> to innowacyjna firma ubezpieczeniowa, która kładzie nacisk na prostotę, elastyczność i dostępność dla klientów. Jesteśmy dedykowani dostarczaniu łatwych w zrozumieniu i skrojonych na miarę rozwiązań ubezpieczeniowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Komunikacyjne:</b> Ochrona Twojego pojazdu z łatwym dostępem do elastycznych opcji pokrycia.</li>
+                    <li><b>Ubezpieczenia Mieszkania:</b> Chronimy Twoje miejsce zamieszkania, oferując spersonalizowane polisy ubezpieczeniowe.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne i zrozumiałe produkty, dostosowane do Twoich indywidualnych planów i celów.</li>
+                    <li><b>Ubezpieczenia Turystyczne:</b> Obejmujemy Cię ochroną podczas podróży, zapewniając spokój i bezpieczeństwo.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Link4:
+                  <ul>
+                    <li><b>Prostota i Elastyczność:</b> Nasze produkty są łatwe w zrozumieniu, a proces ich dostosowywania do Twoich potrzeb jest szybki i prosty.</li>
+                    <li><b>Bezpieczne i Nowoczesne Technologie:</b> Wykorzystujemy innowacyjne rozwiązania, aby zapewnić efektywną i bezpieczną obsługę.</li>
+                    <li><b>Dostępność Online:</b> Jesteśmy dostępni online, umożliwiając łatwe zakupy i zarządzanie polisami przez Internet.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 22 444 44 23</p>
+                <p class="contact-description">E-mail: bok@link4.pl</p>
               </div>
             </div>
           </div>
