--- a/partners/mtu.html
+++ b/partners/mtu.html
@@ -111,25 +111,28 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>MTU</b> to firma ubezpieczeniowa, która kładzie nacisk na jakość, zaufanie i kompleksową ochronę dla klientów. Jesteśmy dedykowani dostarczaniu spersonalizowanych i solidnych rozwiązań ubezpieczeniowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Mienia:</b> Chronimy Twój majątek, oferując wszechstronne polisy ubezpieczeniowe.</li>
+                    <li><b>Ubezpieczenia Odpowiedzialności Cywilnej:</b> Zapewniamy ochronę przed roszczeniami z tytułu szkód wyrządzonych innym.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowa opieka medyczna, zapewniająca spokój i bezpieczeństwo w razie potrzeby.</li>
+                    <li><b>Ubezpieczenia dla Firm:</b> Dostosowane rozwiązania ubezpieczeniowe dla biznesów, zapewniające kompleksową ochronę.</li>
+                  </ul>
+
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego MTU:
+                  <ul>
+                    <li><b>Doświadczenie i Solidność Finansowa:</b> Jesteśmy zgranym zespołem ekspertów, oferując solidność finansową i rzetelność.</li>
+                    <li><b>Spersonalizowane Rozwiązania:</b> Nasze ubezpieczenia są dostosowane do indywidualnych potrzeb klienta, zapewniając kompleksową ochronę.</li>
+                    <li><b>Zaufanie Klientów:</b> Zdobywamy zaufanie klientów poprzez profesjonalizm, uczciwość i terminowość.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 801 107 108</p>
+                <p class="contact-description">E-mail: mtu@mtu.pl</p>
               </div>
             </div>
           </div>
