--- a/partners/proama.html
+++ b/partners/proama.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>Proama</b> to dynamiczna firma ubezpieczeniowa, skupiona na innowacyjności, elastyczności i satysfakcji klienta. Jesteśmy dedykowani dostarczaniu nowoczesnych i dostosowanych rozwiązań ubezpieczeniowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Komunikacyjne:</b> Ochrona pojazdów z elastycznymi opcjami, dopasowanymi do indywidualnych potrzeb.</li>
+                    <li><b>Ubezpieczenia Mieszkania:</b> Spersonalizowane polisy ochronne dla domu, mieszkania i mienia.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne i nowoczesne produkty, dostosowane do zmieniających się potrzeb życiowych.</li>
+                    <li><b>Ubezpieczenia Turystyczne:</b> Obejmujemy Cię ochroną podczas podróży, zapewniając spokój i bezpieczeństwo.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Proama:
+                  <ul>
+                    <li><b>Innowacyjne Rozwiązania:</b> Stawiamy na nowoczesne technologie, aby dostarczać efektywne i łatwe w obsłudze produkty.</li>
+                    <li><b>Elastyczność i Dostosowanie:</b> Nasze ubezpieczenia są elastyczne i dostosowane do zmieniających się potrzeb klienta.</li>
+                    <li><b>Zadowolenie Klienta:</b> Zależy nam na satysfakcji klienta, dlatego oferujemy profesjonalną obsługę i szybkie rozwiązania.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 815 815 815</p>
+                <p class="contact-description">E-mail: centrumklienta@proama.pl</p>
               </div>
             </div>
           </div>
