--- a/partners/pzu.html
+++ b/partners/pzu.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>PZU</b> to lider w polskim sektorze ubezpieczeniowym, łączący tradycję z nowoczesnością. Jesteśmy zaufanym partnerem oferującym szeroką gamę ubezpieczeń dla klientów indywidualnych i biznesowych.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Majątkowe:</b> Ochrona domu, mieszkania i mienia przed nieprzewidzianymi sytuacjami.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne polisy, dostosowane do różnorodnych potrzeb klientów na różnych etapach życia.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowe rozwiązania medyczne, zapewniające spokój i wsparcie w razie potrzeby.</li>
+                    <li><b>Ubezpieczenia dla Firm:</b> Dopasowane produkty dla biznesów, gwarantujące stabilność i bezpieczeństwo finansowe.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego PZU:
+                  <ul>
+                    <li><b>Tradycja i Doświadczenie:</b> Jesteśmy obecni na rynku od dziesięcioleci, zdobywając zaufanie milionów klientów.</li>
+                    <li><b>Wszechstronność Oferty:</b> Nasza oferta obejmuje różnorodne ubezpieczenia, dostosowane do zróżnicowanych potrzeb.</li>
+                    <li><b>Innowacje i Nowoczesność:</b> Stawiamy na rozwój i nowoczesne technologie, aby sprostać oczekiwaniom współczesnych klientów.</li>
+                </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 799 699 599</p>
+                <p class="contact-description">E-mail: kontakt@pzu.pl</p>
               </div>
             </div>
           </div>
