--- a/partners/uniqa.html
+++ b/partners/uniqa.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>UNIQA</b> to dynamiczna firma ubezpieczeniowa, wiodąca na rynku, znana z innowacyjnych rozwiązań i pełnego zaangażowania w potrzeby klientów. Jesteśmy partnerem, który dba o Twoje bezpieczeństwo i spokój.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Mienia:</b> Ochrona Twojego domu, mieszkania i majątku, dostosowana do Twoich indywidualnych potrzeb.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne polisy na życie, oferujące kompleksową ochronę dla Ciebie i Twoich bliskich.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Nowoczesne rozwiązania medyczne, które zapewniają wsparcie w każdej sytuacji.</li>
+                    <li><b>Ubezpieczenia Firmowe:</b> Dostosowane produkty dla przedsiębiorstw, gwarantujące bezpieczeństwo finansowe.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Uniqa:
+                  <ul>
+                    <li><b>Innowacje i Nowoczesność:</b> Stawiamy na rozwój i nowatorskie podejście, aby dostarczać najwyższej jakości usługi.</li>
+                    <li><b>Wsparcie i Profesjonalizm:</b> Nasz zespół to ekspertowie gotowi służyć fachowym doradztwem i obsługą na najwyższym poziomie.</li>
+                    <li><b>Dbałość o Klienta:</b> Każdy klient dla nas jest wyjątkowy, dlatego oferujemy spersonalizowane rozwiązania z myślą o Twoich potrzebach.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 22 599 95 22</p>
+                <p class="contact-description">E-mail: centrala@uniqa.pl</p>
               </div>
             </div>
           </div>
