--- a/partners/warta.html
+++ b/partners/warta.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>WARTA</b> to solidna firma ubezpieczeniowa, z długoletnim doświadczeniem, która kładzie nacisk na tradycję, rzetelność i dostosowanie się do zmieniających się potrzeb klientów. Jesteśmy pewnym partnerem, gotowym chronić Twoją przyszłość.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Mienia:</b> Ochrona domu, mieszkania i majątku, dostosowana do Twoich indywidualnych potrzeb.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Spersonalizowane polisy, które chronią Cię i Twoich bliskich na każdym etapie życia.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowa opieka medyczna, zapewniająca spokój i wsparcie w razie potrzeby.</li>
+                    <li><b>Ubezpieczenia dla Firm:</b> Dostosowane rozwiązania ubezpieczeniowe dla przedsiębiorstw, gwarantujące stabilność finansową.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Warta:
+                  <ul>
+                    <li><b>Tradycja i Doświadczenie:</b> Zaufało nam wielu klientów, korzystających z naszych usług od lat.</li>
+                    <li><b>Dostosowanie do Klienta:</b> Nasze ubezpieczenia są elastyczne, dostosowane do zmieniających się potrzeb klientów.</li>
+                    <li><b>Bezpieczeństwo Finansowe:</b> Jesteśmy pewnym partnerem, oferującym stabilność finansową i rzetelną obsługę.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 502 308 308</p>
+                <p class="contact-description">E-mail: bok@warta.pl</p>
               </div>
             </div>
           </div>
