--- a/partners/wiener.html
+++ b/partners/wiener.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>WIENER</b> to firma ubezpieczeniowa o międzynarodowym zasięgu, znana ze stabilności finansowej i innowacyjnych rozwiązań ubezpieczeniowych. Jesteśmy globalnym partnerem, gotowym chronić Twoje wartości.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Mienia:</b> Ochrona domu, mieszkania i majątku, dostosowana do Twoich indywidualnych potrzeb.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Elastyczne polisy, które gwarantują spokój i bezpieczeństwo dla Ciebie i Twoich bliskich.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Kompleksowa opieka medyczna, dostosowana do zmieniających się potrzeb zdrowotnych.</li>
+                    <li><b>Ubezpieczenia dla Firm:</b> Dostosowane rozwiązania ubezpieczeniowe dla przedsiębiorstw, zapewniające stabilność finansową.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Wiener:
+                  <ul>
+                    <li><b>Globalna Obecność:</b> Jesteśmy obecni na rynkach międzynarodowych, co umożliwia nam oferowanie rozwiązań dostosowanych do różnych kulturowych i biznesowych kontekstów.</li>
+                    <li><b>Innowacje i Nowoczesność:</b> Stawiamy na rozwój i nowatorskie podejście, aby sprostać dynamicznym potrzebom naszych klientów.</li>
+                    <li><b>Stabilność Finansowa:</b> Jesteśmy solidnym partnerem, zapewniającym bezpieczeństwo finansowe i rzetelną obsługę.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 22 469 69 69</p>
+                <p class="contact-description">E-mail: kontakt@wiener.pl</p>
               </div>
             </div>
           </div>
