--- a/partners/allianz.html
+++ b/partners/allianz.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>Allianz</b> to globalna potęga w świecie ubezpieczeń, oferująca kompleksowe rozwiązania dla klientów indywidualnych i biznesowych na całym świecie. Z nami możesz być pewny, że Twoje potrzeby ubezpieczeniowe są w bezpiecznych rękach.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy: 
+                  <ul>
+                    <li><b>Ubezpieczenia Majątkowe:</b> Ochrona Twojego majątku, domu, czy samochodu.</li>
+                    <li><b>Ubezpieczenia na Życie:</b> Planuj swoją przyszłość z naszymi elastycznymi polisami na życie.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Dostosowane do Twoich potrzeb, zapewniające kompleksową opiekę medyczną.</li>
+                    <li><b>Ubezpieczenia Podróży:</b> Bezpieczne podróżowanie z naszymi polisami ubezpieczeniowymi.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego Allianz: 
+                  <ul>
+                    <li><b>Globalne Doświadczenie:</b> Ponad 100 lat doświadczenia w branży ubezpieczeniowej.</li>
+                    <li><b>Wszechstronne Produkty:</b> Oferujemy różnorodne rozwiązania, dostosowane do Twoich indywidualnych potrzeb.</li>
+                    <li><b>Solidność Finansowa:</b> Jesteśmy liderem w branży, gwarantując stabilność i pewność.</li>
+                </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 224 224 224</p>
+                <p class="contact-description">E-Mail: bok@allianz.pl</p>
               </div>
             </div>
           </div>
