--- a/partners/hdi.html
+++ b/partners/hdi.html
@@ -111,25 +111,27 @@
               </div>
               <div class="partner-description">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  <b>HDI</b> to globalny lider w branży ubezpieczeń, dedykowany dostarczaniu innowacyjnych i spersonalizowanych rozwiązań ubezpieczeniowych dla klientów na całym świecie. Jesteśmy znani z solidności finansowej, zaufania klientów oraz doskonałej obsługi.
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Co oferujemy:
+                  <ul>
+                    <li><b>Ubezpieczenia Majątkowe:</b> Chronimy Twój majątek, oferując kompleksową ochronę dla domu, samochodu i więcej.</b></li>
+                    <li><b>Ubezpieczenia na Życie:</b> Planuj swoją przyszłość z naszymi elastycznymi polisami na życie, dostosowanymi do Twoich unikalnych potrzeb.</li>
+                    <li><b>Ubezpieczenia Zdrowotne:</b> Dbamy o Twoje zdrowie, oferując kompleksową opiekę medyczną i wsparcie.</li>
+                    <li><b>Ubezpieczenia Podróży:</b> Bezpiecznie podróżuj z naszymi polisami ubezpieczeniowymi, dostosowanymi do różnych potrzeb podróżnych.</li>
+                  </ul>
                 </p>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora excepturi et ullam at dolores. Autem id tempore
-                  maiores dicta architecto fugit quaerat officiis obcaecati
-                  adipisci, harum quam deleniti facilis enim.
+                  Dlaczego HDI:
+                  <ul>
+                    <li><b>Dedykowana Obsługa Klienta:</b> Nasza firma stawia na indywidualne podejście do każdego klienta, zawsze gotowi sprostać Twoim oczekiwaniom.</li>
+                    <li><b>Innowacje w Ochronie:</b> Wprowadzamy nowoczesne rozwiązania, aby dostarczyć kompleksową ochronę w zmieniającym się świecie.</li>
+                    <li><b>Globalna Obecność:</b> Jako część międzynarodowej grupy, jesteśmy gotowi obsługiwać klientów na całym świecie.</li>
+                  </ul>
                 </p>
-                <p class="contact-description">Infolinia: 000-000-000</p>
-                <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
+                <p class="contact-description">Infolinia: +48 801 801 181</p>
+                <p class="contact-description">E-mail: info@hdi-asekuracja.pl</p>
               </div>
             </div>
           </div>
